--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2"
   }
 }
